# pydiff

./: .gitignore  HANDOFF.md  README.md  pyproject.toml
.github/workflows/: typecheck.yml
src/pydiff/: __main__.py  cli.py  diff.py  gitio.py  html_render.py
src/pydiff/assets/: script.js  styles.css
tests/: test_diff.py  test_pydiff.py
