[project]
name = "pydiff"
version = "0.1.0"
description = "Self-contained HTML diff report generator for git refs"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
pydiff = "pydiff.diff:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "ruff>=0.15.11",
]
