[project]
name = "pydiff"
version = "0.1.1"
description = "Self-contained HTML diff report generator for git refs"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
pydiff = "pydiff.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "basedpyright>=1.39.2",
    "ruff>=0.15.11",
]
